--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -246,10 +246,10 @@
   <main>
     <div class="row">
       <div class="col-logo">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
-          alt="Facebook Logo">
+        <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg"
+          alt="Facebook Logo"> -->
 
-        <h2>Facebook helps you connect and share with the people in your life.</h2>
+        <!-- <h2>Facebook helps you connect and share with the people in your life.</h2> -->
       </div>
       <div class="col-form">
         <div class="form-container">
